// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render analise 1`] = `
<Home
  boolean_analise={true}
  likedTracks={false}
>
  <div
    className="body_home"
  >
    <div
      className="Home"
    >
      <div
        class="img"
      />
      <div
        className="botoes"
      >
        <button
          class="btn"
        >
          <a
            class="link"
            href="https://spotifyapimanager.herokuapp.com/login"
          >
            Logar com Spotify
          </a>
        </button>
        <button
          class="btn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
            }
          }
        >
          Suas playlists
        </button>
        <button
          class="btn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
            }
          }
        >
          Suas músicas mais ouvidas
        </button>
        <button
          class="btn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
            }
          }
        >
          Seus favoritos
        </button>
        <button
          class="btn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
            }
          }
        >
          Seus artistas mais ouvidos
        </button>
        <button
          class="btn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
            }
          }
        >
          Novos lançamentos
        </button>
        <button
          class="btn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
            }
          }
        >
          Minhas Músicas
        </button>
        <button
          class="btn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
            }
          }
        >
          Escutando
        </button>
        <div
          className="lado2"
        >
          <a
            href=" https://pt-br.facebook.com/"
          >
            <AiFillFacebook
              color="white"
              size={40}
            >
              <IconBase
                attr={
                  Object {
                    "viewBox": "0 0 1024 1024",
                  }
                }
                color="white"
                size={40}
              >
                <svg
                  color="white"
                  fill="currentColor"
                  height={40}
                  size={40}
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": "white",
                    }
                  }
                  viewBox="0 0 1024 1024"
                  width={40}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-92.4 233.5h-63.9c-50.1 0-59.8 23.8-59.8 58.8v77.1h119.6l-15.6 120.7h-104V912H539.2V602.2H434.9V481.4h104.3v-89c0-103.3 63.1-159.6 155.3-159.6 44.2 0 82.1 3.3 93.2 4.8v107.9z"
                    key="0"
                  />
                </svg>
              </IconBase>
            </AiFillFacebook>
          </a>
          <a
            href="https://twitter.com/login?lang=pt"
          >
            <AiFillTwitterSquare
              color="white"
              size={40}
            >
              <IconBase
                attr={
                  Object {
                    "viewBox": "0 0 1024 1024",
                  }
                }
                color="white"
                size={40}
              >
                <svg
                  color="white"
                  fill="currentColor"
                  height={40}
                  size={40}
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": "white",
                    }
                  }
                  viewBox="0 0 1024 1024"
                  width={40}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zM727.3 401.7c.3 4.7.3 9.6.3 14.4 0 146.8-111.8 315.9-316.1 315.9-63 0-121.4-18.3-170.6-49.8 9 1 17.6 1.4 26.8 1.4 52 0 99.8-17.6 137.9-47.4-48.8-1-89.8-33-103.8-77 17.1 2.5 32.5 2.5 50.1-2a111 111 0 0 1-88.9-109v-1.4c14.7 8.3 32 13.4 50.1 14.1a111.13 111.13 0 0 1-49.5-92.4c0-20.7 5.4-39.6 15.1-56a315.28 315.28 0 0 0 229 116.1C492 353.1 548.4 292 616.2 292c32 0 60.8 13.4 81.1 35 25.1-4.7 49.1-14.1 70.5-26.7-8.3 25.7-25.7 47.4-48.8 61.1 22.4-2.4 44-8.6 64-17.3-15.1 22.2-34 41.9-55.7 57.6z"
                    key="0"
                  />
                </svg>
              </IconBase>
            </AiFillTwitterSquare>
          </a>
          <a
            href=" https://www.instagram.com/"
          >
            <AiFillInstagram
              color="white"
              size={40}
            >
              <IconBase
                attr={
                  Object {
                    "viewBox": "0 0 1024 1024",
                  }
                }
                color="white"
                size={40}
              >
                <svg
                  color="white"
                  fill="currentColor"
                  height={40}
                  size={40}
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": "white",
                    }
                  }
                  viewBox="0 0 1024 1024"
                  width={40}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M512 378.7c-73.4 0-133.3 59.9-133.3 133.3S438.6 645.3 512 645.3 645.3 585.4 645.3 512 585.4 378.7 512 378.7zM911.8 512c0-55.2.5-109.9-2.6-165-3.1-64-17.7-120.8-64.5-167.6-46.9-46.9-103.6-61.4-167.6-64.5-55.2-3.1-109.9-2.6-165-2.6-55.2 0-109.9-.5-165 2.6-64 3.1-120.8 17.7-167.6 64.5C132.6 226.3 118.1 283 115 347c-3.1 55.2-2.6 109.9-2.6 165s-.5 109.9 2.6 165c3.1 64 17.7 120.8 64.5 167.6 46.9 46.9 103.6 61.4 167.6 64.5 55.2 3.1 109.9 2.6 165 2.6 55.2 0 109.9.5 165-2.6 64-3.1 120.8-17.7 167.6-64.5 46.9-46.9 61.4-103.6 64.5-167.6 3.2-55.1 2.6-109.8 2.6-165zM512 717.1c-113.5 0-205.1-91.6-205.1-205.1S398.5 306.9 512 306.9 717.1 398.5 717.1 512 625.5 717.1 512 717.1zm213.5-370.7c-26.5 0-47.9-21.4-47.9-47.9s21.4-47.9 47.9-47.9 47.9 21.4 47.9 47.9a47.84 47.84 0 0 1-47.9 47.9z"
                    key="0"
                  />
                </svg>
              </IconBase>
            </AiFillInstagram>
          </a>
          <a
            href=" https://www.linkedin.com/"
          >
            <AiOutlineLinkedin
              color="white"
              size={40}
            >
              <IconBase
                attr={
                  Object {
                    "viewBox": "0 0 1024 1024",
                  }
                }
                color="white"
                size={40}
              >
                <svg
                  color="white"
                  fill="currentColor"
                  height={40}
                  size={40}
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": "white",
                    }
                  }
                  viewBox="0 0 1024 1024"
                  width={40}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M847.7 112H176.3c-35.5 0-64.3 28.8-64.3 64.3v671.4c0 35.5 28.8 64.3 64.3 64.3h671.4c35.5 0 64.3-28.8 64.3-64.3V176.3c0-35.5-28.8-64.3-64.3-64.3zm0 736c-447.8-.1-671.7-.2-671.7-.3.1-447.8.2-671.7.3-671.7 447.8.1 671.7.2 671.7.3-.1 447.8-.2 671.7-.3 671.7zM230.6 411.9h118.7v381.8H230.6zm59.4-52.2c37.9 0 68.8-30.8 68.8-68.8a68.8 68.8 0 1 0-137.6 0c-.1 38 30.7 68.8 68.8 68.8zm252.3 245.1c0-49.8 9.5-98 71.2-98 60.8 0 61.7 56.9 61.7 101.2v185.7h118.6V584.3c0-102.8-22.2-181.9-142.3-181.9-57.7 0-96.4 31.7-112.3 61.7h-1.6v-52.2H423.7v381.8h118.6V604.8z"
                    key="0"
                  />
                </svg>
              </IconBase>
            </AiOutlineLinkedin>
          </a>
        </div>
      </div>
    </div>
    <div
      className="blocoHome"
    >
      <div>
        <img
          src="logoLindo.png"
        />
      </div>
      <div
        className="txt"
      >
         
        <h4
          className="bemVindo"
        >
          Bem vindo ao Musics4U!
        </h4>
        <p
          className="homeDesc"
        >
           
          Para ter acesso às suas funcionalidades utilize a navbar ao lado !
           
        </p>
      </div>
    </div>
  </div>
</Home>
`;

exports[`should render minhas musicas com botão analise 1`] = `
<Home
  boolean_analise={false}
  likedTracks={true}
>
  <div
    className="body_home"
  >
    <div
      className="Home"
    >
      <div
        class="img"
      />
      <div
        className="botoes"
      >
        <button
          class="btn"
        >
          <a
            class="link"
            href="https://spotifyapimanager.herokuapp.com/login"
          >
            Logar com Spotify
          </a>
        </button>
        <button
          class="btn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
            }
          }
        >
          Suas playlists
        </button>
        <button
          class="btn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
            }
          }
        >
          Suas músicas mais ouvidas
        </button>
        <button
          class="btn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
            }
          }
        >
          Seus favoritos
        </button>
        <button
          class="btn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
            }
          }
        >
          Seus artistas mais ouvidos
        </button>
        <button
          class="btn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
            }
          }
        >
          Novos lançamentos
        </button>
        <button
          class="btn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
            }
          }
        >
          Minhas Músicas
        </button>
        <button
          class="btn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
            }
          }
        >
          Escutando
        </button>
        <div
          className="lado2"
        >
          <a
            href=" https://pt-br.facebook.com/"
          >
            <AiFillFacebook
              color="white"
              size={40}
            >
              <IconBase
                attr={
                  Object {
                    "viewBox": "0 0 1024 1024",
                  }
                }
                color="white"
                size={40}
              >
                <svg
                  color="white"
                  fill="currentColor"
                  height={40}
                  size={40}
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": "white",
                    }
                  }
                  viewBox="0 0 1024 1024"
                  width={40}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-92.4 233.5h-63.9c-50.1 0-59.8 23.8-59.8 58.8v77.1h119.6l-15.6 120.7h-104V912H539.2V602.2H434.9V481.4h104.3v-89c0-103.3 63.1-159.6 155.3-159.6 44.2 0 82.1 3.3 93.2 4.8v107.9z"
                    key="0"
                  />
                </svg>
              </IconBase>
            </AiFillFacebook>
          </a>
          <a
            href="https://twitter.com/login?lang=pt"
          >
            <AiFillTwitterSquare
              color="white"
              size={40}
            >
              <IconBase
                attr={
                  Object {
                    "viewBox": "0 0 1024 1024",
                  }
                }
                color="white"
                size={40}
              >
                <svg
                  color="white"
                  fill="currentColor"
                  height={40}
                  size={40}
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": "white",
                    }
                  }
                  viewBox="0 0 1024 1024"
                  width={40}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zM727.3 401.7c.3 4.7.3 9.6.3 14.4 0 146.8-111.8 315.9-316.1 315.9-63 0-121.4-18.3-170.6-49.8 9 1 17.6 1.4 26.8 1.4 52 0 99.8-17.6 137.9-47.4-48.8-1-89.8-33-103.8-77 17.1 2.5 32.5 2.5 50.1-2a111 111 0 0 1-88.9-109v-1.4c14.7 8.3 32 13.4 50.1 14.1a111.13 111.13 0 0 1-49.5-92.4c0-20.7 5.4-39.6 15.1-56a315.28 315.28 0 0 0 229 116.1C492 353.1 548.4 292 616.2 292c32 0 60.8 13.4 81.1 35 25.1-4.7 49.1-14.1 70.5-26.7-8.3 25.7-25.7 47.4-48.8 61.1 22.4-2.4 44-8.6 64-17.3-15.1 22.2-34 41.9-55.7 57.6z"
                    key="0"
                  />
                </svg>
              </IconBase>
            </AiFillTwitterSquare>
          </a>
          <a
            href=" https://www.instagram.com/"
          >
            <AiFillInstagram
              color="white"
              size={40}
            >
              <IconBase
                attr={
                  Object {
                    "viewBox": "0 0 1024 1024",
                  }
                }
                color="white"
                size={40}
              >
                <svg
                  color="white"
                  fill="currentColor"
                  height={40}
                  size={40}
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": "white",
                    }
                  }
                  viewBox="0 0 1024 1024"
                  width={40}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M512 378.7c-73.4 0-133.3 59.9-133.3 133.3S438.6 645.3 512 645.3 645.3 585.4 645.3 512 585.4 378.7 512 378.7zM911.8 512c0-55.2.5-109.9-2.6-165-3.1-64-17.7-120.8-64.5-167.6-46.9-46.9-103.6-61.4-167.6-64.5-55.2-3.1-109.9-2.6-165-2.6-55.2 0-109.9-.5-165 2.6-64 3.1-120.8 17.7-167.6 64.5C132.6 226.3 118.1 283 115 347c-3.1 55.2-2.6 109.9-2.6 165s-.5 109.9 2.6 165c3.1 64 17.7 120.8 64.5 167.6 46.9 46.9 103.6 61.4 167.6 64.5 55.2 3.1 109.9 2.6 165 2.6 55.2 0 109.9.5 165-2.6 64-3.1 120.8-17.7 167.6-64.5 46.9-46.9 61.4-103.6 64.5-167.6 3.2-55.1 2.6-109.8 2.6-165zM512 717.1c-113.5 0-205.1-91.6-205.1-205.1S398.5 306.9 512 306.9 717.1 398.5 717.1 512 625.5 717.1 512 717.1zm213.5-370.7c-26.5 0-47.9-21.4-47.9-47.9s21.4-47.9 47.9-47.9 47.9 21.4 47.9 47.9a47.84 47.84 0 0 1-47.9 47.9z"
                    key="0"
                  />
                </svg>
              </IconBase>
            </AiFillInstagram>
          </a>
          <a
            href=" https://www.linkedin.com/"
          >
            <AiOutlineLinkedin
              color="white"
              size={40}
            >
              <IconBase
                attr={
                  Object {
                    "viewBox": "0 0 1024 1024",
                  }
                }
                color="white"
                size={40}
              >
                <svg
                  color="white"
                  fill="currentColor"
                  height={40}
                  size={40}
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": "white",
                    }
                  }
                  viewBox="0 0 1024 1024"
                  width={40}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M847.7 112H176.3c-35.5 0-64.3 28.8-64.3 64.3v671.4c0 35.5 28.8 64.3 64.3 64.3h671.4c35.5 0 64.3-28.8 64.3-64.3V176.3c0-35.5-28.8-64.3-64.3-64.3zm0 736c-447.8-.1-671.7-.2-671.7-.3.1-447.8.2-671.7.3-671.7 447.8.1 671.7.2 671.7.3-.1 447.8-.2 671.7-.3 671.7zM230.6 411.9h118.7v381.8H230.6zm59.4-52.2c37.9 0 68.8-30.8 68.8-68.8a68.8 68.8 0 1 0-137.6 0c-.1 38 30.7 68.8 68.8 68.8zm252.3 245.1c0-49.8 9.5-98 71.2-98 60.8 0 61.7 56.9 61.7 101.2v185.7h118.6V584.3c0-102.8-22.2-181.9-142.3-181.9-57.7 0-96.4 31.7-112.3 61.7h-1.6v-52.2H423.7v381.8h118.6V604.8z"
                    key="0"
                  />
                </svg>
              </IconBase>
            </AiOutlineLinkedin>
          </a>
        </div>
      </div>
    </div>
    <div
      className="blocoHome"
    >
      <div>
        <img
          src="logoLindo.png"
        />
      </div>
      <div
        className="txt"
      >
         
        <h4
          className="bemVindo"
        >
          Bem vindo ao Musics4U!
        </h4>
        <p
          className="homeDesc"
        >
           
          Para ter acesso às suas funcionalidades utilize a navbar ao lado !
           
        </p>
      </div>
    </div>
  </div>
</Home>
`;
